Simplify styling by creating a card class and eliminating styling elements.

--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,23 +1,8 @@
-<div>
-    <br>
-
-    <div>
-        <div class="row" style="padding-left: 15px">
-            <div ui-view></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-6">
-                <div home-processes project="home.project"></div>
-                <div home-reviews project="home.project"></div>
-                <div home-notes project="home.project"></div>
-            </div>
-            <div class="col-xs-6">
-                <div home-samples project="home.project"></div>
-                <div home-files project="home.project"></div>
-                <div home-calendar project="home.project"></div>
-            </div>
-        </div>
+<div class="row">
+    <div class="col-sm-12 card">
+        <div ag-grid="home.gridOptions" class="ag-blue"></div>
     </div>
 </div>
+
 
 
