--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -1,22 +1,20 @@
 <div class="row">
-    <div class="col-xs-3 no-padding">
-        <div class="details-sidebar">
-            <div class="row">
-                <div class="">
-                    <h4 class="file-color text-uppercase text-center">file tree </h4>
-                </div>
+    <div class="col-xs-3 card card-dark card-left card-file-tree">
+        <div class="row">
+            <div class="">
+                <h4 class="file-color text-uppercase text-center">file tree</h4>
             </div>
-            <div class="row">
-                <file-upload-panel></file-upload-panel>
-            </div>
-            <div ng-if="files.gridShowingFlag"
-                 ag-grid="files.gridOptions"
-                 class="ag-file-browser">
-            </div>
-            <div ng-if="!files.gridShowingFlag"
-                 ag-grid="files.gridOptions"
-                 class="ag-file-browser">
-            </div>
+        </div>
+        <div class="row">
+            <file-upload-panel></file-upload-panel>
+        </div>
+        <div ng-if="files.gridShowingFlag"
+             ag-grid="files.gridOptions"
+             class="ag-file-browser">
+        </div>
+        <div ng-if="!files.gridShowingFlag"
+             ag-grid="files.gridOptions"
+             class="ag-file-browser">
         </div>
     </div>
     <div class="col-xs-9 no-padding">
