--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -1,82 +1,78 @@
-<div>
-    <div class="row" style="background-color: #518394; margin-bottom: 0px">
-        <ul style="padding-left: 5px;" class="taskbar nav nav-tabs">
-            <li class="dropdown projects-drop-down">
-                <a title="{{navbar.project.name}}" class="dropdown-toggle pointer" data-toggle="dropdown"
-                   style="padding-left: 5px;">
-                    <i class="fa fa-fw fa-briefcase"></i>
-                    {{navbar.project.name | truncate: 25: '...'}} <span class="white badge" style="float: none;">{{navbar.projects.length}}</span>
-                    <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu projects-drop-down nav-dropdown-scrollbar" role="menu">
-                    <li data-toggle="modal"
-                        data-target="#newProject"><a><i class="fa fa-fw fa-plus"></i>New Project</a></li>
-                    <li class="divider"></li>
-                    <li ng-repeat="p in navbar.projects"
-                        ng-class="{'active-project': p.id === project.id}" ng-click="navbar.setProject(p)">
-                        <a>{{p.name}}</a>
-                    </li>
-                </ul>
-            </li>
-            <li role="presentation" ui-sref-active="active">
-                <a ui-sref="projects.project.home"
-                   ui-sref-opts="{reload: true}"
-                   ng-click="navbar.clearSearch()"
-                   class="pointer">
-                    <i class="fa fa-fw fa-home"></i>Home
-                </a>
-            </li>
-            <li role="presentation" ui-sref-active="active">
-                <a ui-sref="projects.project.processes.list"
-                   ui-sref-opts="{reload: true}"
-                   ng-click="navbar.clearSearch()"
-                   class="pointer">
-                    <i class="fa fa-fw fa-code-fork bold"></i>Processes
-                </a>
-            </li>
-            <li role="presentation" ui-sref-active="active">
-                <a ui-sref="projects.project.files.all"
-                   ui-sref-opts="{reload: true}"
-                   ng-click="navbar.clearSearch()"
-                   class="pointer">
-                    <i class="fa fa-fw fa-files-o"></i> Files
-                </a>
-            </li>
-            <li role="presentation" ui-sref-active="active">
-                <a ui-sref="projects.project.samples.all"
-                   ui-sref-opts="{reload: true}"
-                   ng-click="navbar.clearSearch()"
-                   class="pointer">
-                    <i class="fa fa-fw fa-cubes"></i> Samples
-                </a>
-            </li>
-            <li role="presentation" ui-sref-active="active">
-                <a ui-sref="projects.project.reviews"
-                   ui-sref-opts="{reload: true}"
-                   ng-click="navbar.clearSearch()"
-                   class="pointer">
-                    <i class="fa fa-fw fa-comment"></i> Reviews
-                </a>
-            </li>
-            <li ng-if="false" role="presentation" ui-sref-active="active">
-                <a ui-sref="projects.project.notes"
-                   ui-sref-opts="{reload: true}"
-                   ng-click="navbar.clearSearch()"
-                   class="pointer">
-                    <i class="fa fa-fw fa-edit"></i>Notes
-                </a>
-            </li>
+<div class="project-nav-bar">
+    <ul class="project-bar nav nav-tabs">
+        <li class="dropdown projects-drop-down">
+            <a title="{{navbar.project.name}}" class="dropdown-toggle pointer projects-focus" data-toggle="dropdown">
+                <i class="fa fa-fw fa-briefcase"></i>
+                {{navbar.project.name | truncate: 25: '...'}} <span class="white badge">{{navbar.projects.length}}</span>
+                <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu projects-drop-down nav-dropdown-scrollbar" role="menu">
+                <li data-toggle="modal"
+                    data-target="#newProject"><a><i class="fa fa-fw fa-plus"></i>New Project</a></li>
+                <li class="divider"></li>
+                <li ng-repeat="p in navbar.projects"
+                    ng-class="{'active-project': p.id === project.id}" ng-click="navbar.setProject(p)">
+                    <a>{{p.name}}</a>
+                </li>
+            </ul>
+        </li>
+        <li role="presentation" ui-sref-active="active">
+            <a ui-sref="projects.project.home"
+               ui-sref-opts="{reload: true}"
+               ng-click="navbar.clearSearch()"
+               class="pointer">
+                <i class="fa fa-fw fa-home"></i>Home
+            </a>
+        </li>
+        <li role="presentation" ui-sref-active="active">
+            <a ui-sref="projects.project.processes.list"
+               ui-sref-opts="{reload: true}"
+               ng-click="navbar.clearSearch()"
+               class="pointer">
+                <i class="fa fa-fw fa-code-fork bold"></i>Processes
+            </a>
+        </li>
+        <li role="presentation" ui-sref-active="active">
+            <a ui-sref="projects.project.files.all"
+               ui-sref-opts="{reload: true}"
+               ng-click="navbar.clearSearch()"
+               class="pointer">
+                <i class="fa fa-fw fa-files-o"></i> Files
+            </a>
+        </li>
+        <li role="presentation" ui-sref-active="active">
+            <a ui-sref="projects.project.samples.all"
+               ui-sref-opts="{reload: true}"
+               ng-click="navbar.clearSearch()"
+               class="pointer">
+                <i class="fa fa-fw fa-cubes"></i> Samples
+            </a>
+        </li>
+        <li role="presentation" ui-sref-active="active">
+            <a ui-sref="projects.project.reviews"
+               ui-sref-opts="{reload: true}"
+               ng-click="navbar.clearSearch()"
+               class="pointer">
+                <i class="fa fa-fw fa-comment"></i> Reviews
+            </a>
+        </li>
+        <li ng-if="false" role="presentation" ui-sref-active="active">
+            <a ui-sref="projects.project.notes"
+               ui-sref-opts="{reload: true}"
+               ng-click="navbar.clearSearch()"
+               class="pointer">
+                <i class="fa fa-fw fa-edit"></i>Notes
+            </a>
+        </li>
 
-            <li role="presentation" ui-sref-active="active">
-                <a style="padding: 10px 5px;"
-                   ui-sref="projects.project.access"
-                   ui-sref-opts="{reload: true}"
-                   ng-click="navbar.clearSearch()"
-                   class="pointer"
-                   title="Project Settings">
-                    <i class="fa fa-fw fa-1x fa-gear"></i>Settings
-                </a>
-            </li>
-        </ul>
-    </div>
+        <li role="presentation" ui-sref-active="active">
+            <a ui-sref="projects.project.access"
+               ui-sref-opts="{reload: true}"
+               ng-click="navbar.clearSearch()"
+               class="pointer"
+               title="Project Settings">
+                <i class="fa fa-fw fa-1x fa-gear"></i>Settings
+            </a>
+        </li>
+    </ul>
 </div>
