--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-3 card card-dark card-left card-file-tree">
+    <div class="col-xs-3 card card-dark card-left card-side-bar">
         <div class="row">
             <div class="">
                 <h4 class="file-color text-uppercase text-center">file tree</h4>
