--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -1,53 +1,62 @@
 <div>
     <div class="row">
-        <div class="col-xs-12 details-container">
-            <nav class="navbar navbar-default">
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li ng-class="{active: type === 'my_reviews'}"><a ng-click="listReviewsByType('my_reviews')">My
-                            Reviews</a>
-                        </li>
-                        <li ng-class="{active: type === 'due'}"><a ng-click="listReviewsByType('due')">Due</a></li>
+        <div class="col-xs-12">
+            <ul class="list-inline menu-bar">
+                <li ng-class="{active: type === 'my_reviews'}">
+                    <i class="fa fa-fw fa-user"></i>
+                    <a class="text-uppercase" ng-click="listReviewsByType('my_reviews')">
+                        My Reviews
+                    </a>
+                </li>
+                <li ng-class="{active: type === 'due'}">
+                    <i class="fa fa-fw fa-exclamation-circle text-danger"></i>
+                    <a class="text-uppercase" ng-click="listReviewsByType('due')">
+                        Due
+                    </a>
+                </li>
 
-                        <li ng-class="{active: type === 'all'}"><a ng-click="listReviewsByType('all')">all</a>
-                        </li>
-                        <li ng-class="{active: type === 'closed'}"><a
-                                ng-click="listReviewsByType('closed')">Archived</a></li>
-                    </ul>
-                </div>
-            </nav>
+                <li ng-class="{active: type === 'all'}">
+                    <i class="fa fa-fw fa-list"></i>
+                    <a class="text-uppercase" ng-click="listReviewsByType('all')">
+                        all
+                    </a>
+                </li>
+                <li ng-class="{active: type === 'closed'}">
+                    <i class="fa fa-fw fa-archive"></i>
+                    <a class="text-uppercase" ng-click="listReviewsByType('closed')">
+                        Archived
+                    </a>
+                </li>
+            </ul>
         </div>
 
-        <div class="row" style="margin-top: 20px;">
-            <div class="col-xs-4">
-                <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
-                    <div class="row">
-                        <div style="text-align: center;margin-top: 20px;">
-                            <button ui-sref="projects.project.reviews.create"
-                                    class="btn-review btn-details-container btn btn-default"> create
-                            </button>
-                        </div>
+        <div class="row">
+            <div class="col-xs-4 card card-dark card-left card-side-bar">
+                <div class="row">
+                    <div class="card-header text-center">
+                        <button ui-sref="projects.project.reviews.create"
+                                class="btn-review btn btn-default btn-attention"> create
+                        </button>
                     </div>
-                    <ul class="list-group">
-                        <li class="list-group-item pointer"
-                            ng-repeat="each_review in reviews"
-                            ng-class="{active: review.id === each_review.id}"
-                            ui-sref="projects.project.reviews.edit({'review_id': each_review.id})">
-                                <span class="pull-right">
-                                        <a style="font-size: 25px;" ng-if="review.messages.length !== 0"
-                                           class="fa-stack fa-2x">
-                                            <i ng-class="{'review-active': review.id === each_review.id, 'review-inactive': review.id !== each_review.id}"
-                                               class="fa fa-comment fa-stack-1x"></i>
-                                            <i style='font-size: 13px;line-height: 0;font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;font-weight: bold'
-                                               class="fa fa-stack-1x fa-inverse">{{each_review.messages.length}}</i>
-                                        </a>
-                                </span>
-                            {{each_review.title}}
-                        </li>
-                    </ul>
                 </div>
+                <ul ng-if="reviews.length !== 0" class="list-group">
+                    <li class="list-group-item pointer"
+                        ng-repeat="r in reviews"
+                        ng-class="{active: review.id === r.id}"
+                        ui-sref="projects.project.reviews.edit({'review_id': r.id})">
+                        <h4 class="list-group-item-heading">{{r.title}}</h4>
+                        <span class="pull-right">
+                            <i class="fa fa-fw fa-comment"></i>{{r.messages.length}}
+                        </span>
+                        <p>{{r.title}}</p>
+                    </li>
+                </ul>
+
+                <h4 ng-if="reviews.length === 0" class="text-center text-uppercase">
+                    {{noReviewsMessage}}
+                </h4>
             </div>
-            <div class="col-xs-8">
+            <div class="col-xs-8 card-right no-padding">
                 <div ui-view></div>
             </div>
         </div>
