--- a/website/app/index.html
+++ b/website/app/index.html
@@ -257,6 +257,7 @@
 <script src="application/processes/validators.js"></script>
 <script src="application/processes/measurements.js"></script>
 <script src="application/processes/measurements.service.js"></script>
+<script src="application/processes/process-list.service.js"></script>
 <script src="application/core/components/properties/properties.js"></script>
 <script src="application/services/project-nav-bar-state-service.js"></script>
 <script src="application/core/projects/project/processes/transformation-controller.js"></script>
