--- a/website/app/index.html
+++ b/website/app/index.html
@@ -227,6 +227,7 @@
 <script src="application/services/tags.js"></script>
 <script src="application/services/review-service.js"></script>
 <script src="application/services/process-list-service.js"></script>
+<script src="application/services/process-edit.service.js"></script>
 <script src="application/services/ui.js"></script>
 <script src="application/services/search-query-service.js"></script>
 <script src="application/services/list-params.js"></script>
