--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -27,7 +27,7 @@
                 </a>
             </li>
             <li role="presentation" ui-sref-active="active">
-                <a ui-sref="projects.project.processes.list"
+                <a ui-sref="projects.project.processes.list.view"
                    ui-sref-opts="{reload: true}"
                    ng-click="navbar.clearSearch()"
                    class="pointer">
