--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -39,26 +39,24 @@
                         </button>
                     </div>
                 </div>
-                <ul class="list-group">
-                    <li class="list-group-item" ng-repeat="r in reviews"
+
+                <ul ng-if="reviews.length !== 0" class="list-group">
+                    <li class="list-group-item pointer"
+                        ng-repeat="r in reviews"
+                        ng-class="{active: review.id === r.id}"
                         ui-sref="projects.project.reviews.edit({'review_id': r.id})">
-                        {{r.title}}
-                        <span class="pull-right"><i class="fa fa-fw fa-comment"></i>{{r.messages.length}}</span>
-                        <div ta-bind class="small" ng-model="r.messages[0].message"></div>
+                        <b class="list-group-item-heading">{{r.title}}
+                        </b>
+                        <div ta-bind ng-model="r.messages[0].message" class="small"></div>
+                        <div class="row small" style="padding-top: 5px;">
+                            <span class="space-left"><i class="fa fa-fw fa-cubes sample"></i>3</span>
+                            <span class="space-left"><i class="fa fa-fw fa-code-fork process"></i>2 </span>
+                            <span class="space-left"><i class="fa fa-fw fa-files-o file"></i>1   </span>
+                            <span class="space-left"><i class="fa fa-fw fa-comments-o review"></i>{{r.messages.length}}  </span>
+                            <span class="space-left small pull-right">Last commented by: {{r.messages[r.messages.length -1 ].who}}</span>
+                        </div>
                     </li>
                 </ul>
-                <!--<ul ng-if="reviews.length !== 0" class="list-group">-->
-                    <!--<li class="list-group-item pointer"-->
-                        <!--ng-repeat="r in reviews"-->
-                        <!--ng-class="{active: review.id === r.id}"-->
-                        <!--ui-sref="projects.project.reviews.edit({'review_id': r.id})">-->
-                        <!--<h4 class="list-group-item-heading">{{r.title}}</h4>-->
-                        <!--<span class="pull-right">-->
-                            <!--<i class="fa fa-fw fa-comment"></i>{{r.messages.length}}-->
-                        <!--</span>-->
-                        <!--<p>{{r.title}}</p>-->
-                    <!--</li>-->
-                <!--</ul>-->
 
                 <h4 ng-if="reviews.length === 0" class="text-center text-uppercase">
                     {{noReviewsMessage}}
