--- a/website/app/application/core/projects/project/reviews/myModalContent.html
+++ b/website/app/application/core/projects/project/reviews/myModalContent.html
@@ -36,16 +36,16 @@
             </div>
             <div ng-show="!modal.type">
                 <ul class="nav nav-tabs" role="tablist" id="myTab2">
-                    <li class="active"><a data-target="#11" data-toggle="tab">Files</a></li>
+                    <!--<li class="active"><a data-target="#11" data-toggle="tab">Files</a></li>-->
                     <li><a data-target="#22" data-toggle="tab">Samples</a></li>
                     <li><a data-target="#33" data-toggle="tab">Processes</a></li>
                 </ul>
                 <div class="tab-content">
-                    <div class="tab-pane active" id="11">
-                        <div style="padding: 10px;">
-                            <div modal-files project="project"></div>
-                        </div>
-                    </div>
+                    <!--<div class="tab-pane active" id="11">-->
+                        <!--<div style="padding: 10px;">-->
+                            <!--<div modal-files project="project"></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <div class="tab-pane" id="22">
                         <div style="padding: 10px;">
                             <div modal-samples project="project"></div>
