--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -45,13 +45,14 @@
                         ng-repeat="r in reviews"
                         ng-class="{active: review.id === r.id}"
                         ui-sref="projects.project.reviews.edit({'review_id': r.id})">
-                        <b class="list-group-item-heading">{{r.title}}
+                        <b class="list-group-item-heading">{{r.title | limitTo: 40 }} <span ng-if="r.title.length > 40">...</span>
                         </b>
-                        <div ta-bind ng-model="r.messages[0].message" class="small"></div>
+
+                        <div class="truncate-text" ta-bind ng-model="r.messages[0].message" class="small"></div>
                         <div class="row small" style="padding-top: 5px;">
-                            <span class="space-left"><i class="fa fa-fw fa-cubes sample"></i>3</span>
-                            <span class="space-left"><i class="fa fa-fw fa-code-fork process"></i>2 </span>
-                            <span class="space-left"><i class="fa fa-fw fa-files-o file"></i>1   </span>
+                            <span class="space-left"><i class="fa fa-fw fa-cubes sample"></i>{{(r.attachments | byKey: 'type': 'sample').length}}</span>
+                            <span class="space-left"><i class="fa fa-fw fa-code-fork process"></i>{{(r.attachments | byKey: 'type': 'process').length}} </span>
+                            <span class="space-left"><i class="fa fa-fw fa-files-o file"></i>{{(r.attachments | byKey: 'type': 'file').length}}    </span>
                             <span class="space-left"><i class="fa fa-fw fa-comments-o review"></i>{{r.messages.length}}  </span>
                             <span class="space-left small pull-right">Last commented by: {{r.messages[r.messages.length -1 ].who}}</span>
                         </div>
