--- a/website/app/index.html
+++ b/website/app/index.html
@@ -165,7 +165,7 @@
 <script src="application/core/projects/project/reviews/modal-instance-controller.js"></script>
 <script src="application/core/projects/project/notes/notes-controller.js"></script>
 <script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
-<script src="application/core/projects/project/modal/files-modal-controller.js"></script>
+<!--<script src="application/core/projects/project/modal/files-modal-controller.js"></script>-->
 <script src="application/core/projects/project/modal/process-modal-controller.js"></script>
 <script src="application/core/projects/project/modal/samples-modal-controller.js"></script>
 <script src="application/directives/text-editor-directive.js"></script>
