--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -4,14 +4,14 @@
             <li>
                 <h2 class="file-color" ng-if="!ctrl.renameActive">{{ctrl.active.name}}</h2>
                 <span ng-if="ctrl.renameActive">
-                    <input type="text" ng-model="ctrl.newName" on-enter="ctrl.renameFile()">
+                    <input type="text" class="section-as-margin" ng-model="ctrl.newName" on-enter="ctrl.renameFile()">
                     <button class="btn btn-files" ng-click="ctrl.renameFile()">Done</button>
-                    <button class="btn btn-danger">Cancel</button>
+                    <button class="btn btn-danger" ng-click="ctrl.newName = ''; ctrl.renameActive = false">Cancel</button>
                 </span>
             </li>
-            <li><a ng-click="ctrl.renameActive = !ctrl.renameActive" class="heading-label text-uppercase">rename</a>
+            <li ng-if="!ctrl.renameActive"><a ng-click="ctrl.renameActive = !ctrl.renameActive" class="heading-label text-uppercase">rename</a>
             </li>
-            <li>
+            <li ng-if="!ctrl.renameActive">
                 <a ng-href="{{ctrl.downloadSrc(ctrl.active)}}"
                    class="heading-label text-uppercase"
                    download="{{ctrl.active.name}}">
