--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -2,65 +2,72 @@
     <div class="col-xs-12 card card-right">
         <ul class="list-inline no-bottom-margin">
             <li>
-                <h2 class="file-color" ng-if="!ctrl.renameActive">{{ctrl.active.name}}</h2>
+                <h2 class="file-color" ng-if="!ctrl.renameActive">{{ctrl.file.name}}</h2>
                 <span ng-if="ctrl.renameActive">
                     <input type="text" class="section-as-margin" ng-model="ctrl.newName" on-enter="ctrl.renameFile()">
                     <button class="btn btn-files" ng-click="ctrl.renameFile()">Done</button>
-                    <button class="btn btn-danger" ng-click="ctrl.newName = ''; ctrl.renameActive = false">Cancel</button>
+                    <button class="btn btn-danger" ng-click="ctrl.newName = ''; ctrl.renameActive = false">Cancel
+                    </button>
                 </span>
             </li>
-            <li ng-if="!ctrl.renameActive"><a ng-click="ctrl.renameActive = !ctrl.renameActive" class="heading-label text-uppercase">rename</a>
+            <li ng-if="!ctrl.renameActive">
+                <a ng-click="ctrl.renameActive = !ctrl.renameActive" class="heading-label text-uppercase">rename</a>
             </li>
             <li ng-if="!ctrl.renameActive">
-                <a ng-href="{{ctrl.downloadSrc(ctrl.active)}}"
+                <a ng-href="{{ctrl.downloadSrc()}}"
                    class="heading-label text-uppercase"
-                   download="{{ctrl.active.name}}">
+                   download="{{ctrl.file.name}}">
                     download
                 </a>
             </li>
+            <li ng-if="!ctrl.renameActive">
+                <a ng-click="ctrl.deleteFile()" class="heading-label text-uppercase text-danger">delete</a>
+            </li>
         </ul>
         <ul class="list-inline text-muted no-bottom-margin">
-            <li>Type: {{ctrl.active.mediatype.mime}}</li>
-            <li>Owner: {{ctrl.active.owner}}</li>
-            <li>Created: {{ctrl.active.birthtime | toDateString}}</li>
-            <li>Size: {{ctrl.active.size | bytes}}</li>
+            <li>Type: {{ctrl.file.mediatype.mime}}</li>
+            <li>Owner: {{ctrl.file.owner}}</li>
+            <li>Created: {{ctrl.file.birthtime | toDateString}}</li>
+            <li>Size: {{ctrl.file.size | bytes}}</li>
         </ul>
 
         <div class="row">
             <h4 class="text-uppercase section">description</h4>
 
-            <p>{{ctrl.active.description}}</p>
+            <p>{{ctrl.file.description}}</p>
         </div>
 
         <div class="row">
             <div class="section">
-                <display-file-contents file="ctrl.active"></display-file-contents>
+                <display-file-contents file="ctrl.file"></display-file-contents>
             </div>
         </div>
 
         <div class="row">
             <h4 class="text-uppercase section">tags</h4>
             <tags-input on-tag-added="ctrl.updateTags()" display-property="tag_id"
-                        on-tag-removed="ctrl.updateTags()" ng-model="ctrl.active.tags"
+                        on-tag-removed="ctrl.updateTags()" ng-model="ctrl.file.tags"
                         placeholder="Add a Tag" replace-spaces-with-dashes="false">
             </tags-input>
         </div>
 
-        <div class="row">
-            <h4 class="text-uppercase section">note</h4>
+        <div ng-if="false" class="row">
+            <h4 class="text-uppercase section">notes</h4>
 
-            <div ng-if="false" class="row">
+            <div ng-repeat="note in ctrl.file.notes" class="row">
                     <span class="pull-right">
-                            <a ng-click="ctrl.editNote = !ctrl.editNote"><i class="fa fa-fw fa-edit"></i></a></span>
+                            <a ng-click="note.edit = !note.edit"><i class="fa fa-fw fa-edit"></i></a></span>
 
-                <div class="row" ng-show="!ctrl.editNote">
-                    <div class="col-xs-8">Title: {{ctrl.active.notes[0].title}}</div>
+                <div class="row" ng-if="!note.edit">
+                    <div class="col-xs-8">Title: {{note.title}}</div>
                     <hr>
-                    <div ng-if="ctrl.active.notes.length !== 0" class="col-xs-11" ta-bind
-                         ng-model="ctrl.active.notes[0].note"></div>
+                    <div class="col-xs-11" ta-bind ng-model="note.note"></div>
                 </div>
-                <div class="row" ng-show="ctrl.editNote">
-                    <create-note item-type="datafile" item="ctrl.active"></create-note>
+                <div class="row" ng-if="note.edit">
+                    <create-note note-title="note.file" note-body="note.note"
+                                 accept="ctrl.saveNote()"
+                                 cancel="ctrl.cancelNote()">
+                    </create-note>
                 </div>
             </div>
         </div>
