--- a/website/app/application/directives/create-note.html
+++ b/website/app/application/directives/create-note.html
@@ -2,7 +2,7 @@
     <div class="form-group">
         <label class="control-label col-xs-2">Title:</label>
         <div class="col-xs-4">
-            <input class="form-control" ng-model="note.model.title">
+            <input class="form-control" ng-model="note.title">
         </div>
     </div>
     <div class="form-group">
@@ -12,16 +12,16 @@
             <text-angular ta-toolbar="[['h2','h5', 'h6','quote'],
                               ['bold','italics','underline'],
                               ['justifyLeft','justifyCenter','justifyRight'], ['insertLink', 'insertImage']]"
-                          ng-model="note.model.note">
+                          ng-model="note.note">
             </text-angular>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-2"></label>
-        <button validation-submit="Form" ng-click="note.save()"
+        <button validation-submit="Form" ng-click="save({note: note})"
                 class="btn btn-xs btn-mini btn-primary">
             Save
         </button>
-        <button class="btn btn-xs btn-mini btn-danger" ng-click="note.cancel()">Cancel</button>
+        <button class="btn btn-xs btn-mini btn-danger" ng-click="cancel()">Cancel</button>
     </div>
 </form>
