--- a/website/app/application/directives/edit-note.html
+++ b/website/app/application/directives/edit-note.html
@@ -22,6 +22,6 @@
                 class="btn btn-xs btn-mini btn-primary">
             Save
         </button>
-        <button class="btn btn-xs btn-mini btn-danger" ng-click="cancel()">Cancel</button>
+        <button class="btn btn-xs btn-mini btn-danger" ng-click="cancel({note: note})">Cancel</button>
     </div>
 </form>
